--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
     "sqlite3": "^5.1.7"
